internal/xds/translator/testdata/out/xds-ir/load-balancer-endpointoverride-backend-utilization-weighted-zones.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: backend-utilization-weighted-zones-endpoint-override-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: backend-utilization-weighted-zones-endpoint-override-dest/backend/0
            weight: 1
